# manganotif-back

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  manganotif.db
.github/workflows/: deploy.yml
.sqlx/: query-542b2c00e33c06f214ae7f71688315c489945fcbb6f95f9343843c8cd743d005.json  query-9c4986631b8c35b3a9c8b9a08fd20b06e2b2502fede26fe2afde2f216bc5eb1e.json  query-cfc226fcc5dfd3138cd24a2ce60352666e812787aff94e8b1152d641317d068c.json
migrations/: 20251105163939_mangas.down.sql  20251105163939_mangas.up.sql
src/: lib.rs  main.rs  state.rs
src/database/: global_manga.rs  manga.rs  manga_not_found.rs  mod.rs
src/database/structs/: global_manga.rs  manga.rs  manga_not_found.rs  mod.rs
src/middleware/: check_auth.rs  mod.rs
src/routes/: global_manga.rs  health_check.rs  manga.rs  manga_not_found.rs  mod.rs
src/utils/: api_error.rs  mod.rs
