[package]
name = "manganotif-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.6.6", features = ["cors"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
anyhow = "1.0.100"
